remove conda build tools

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -163,15 +163,12 @@ jobs:
         run: |
           brew install ccache
           ccache -M 2G  # See .github/workflows/readme.md for ccache strategy.
-          echo
           source util/ci_utils.sh
-          install_python_dependencies with-conda
-          echo
-          echo -n "Using conda"
+          install_python_dependencies
           conda info
           echo "Using python: $(which python)"
           python --version
-          echo -n "Using pip: "
+          echo -n "Using pip: $(which pip)"
           python -m pip --version
           echo "Using cmake: $(which cmake)"
           cmake --version
@@ -182,20 +179,16 @@ jobs:
           PATH=/usr/local/var/homebrew/linked/ccache/libexec:$PATH
           ccache -s
           source util/ci_utils.sh
-          build_pip_conda_package
+          build_pip_package
           ccache -s
           PIP_PKG_NAME="$(basename build/lib/python_package/pip_package/open3d*.whl)"
           echo "PIP_PKG_NAME=$PIP_PKG_NAME" >> $GITHUB_ENV
-          CONDA_PKG_NAME="$(basename build/lib/python_package/conda_package/osx-64/open3d*.tar.bz2)"
-          echo "CONDA_PKG_NAME=$CONDA_PKG_NAME" >> $GITHUB_ENV
 
       - name: Upload wheel
         uses: actions/upload-artifact@v2
         with:
           name: open3d_macosx_x86_64_wheels
-          path: |
-            build/lib/python_package/pip_package/${{ env.PIP_PKG_NAME }}
-            build/lib/python_package/conda_package/osx-64/${{ env.CONDA_PKG_NAME }}
+          path: build/lib/python_package/pip_package/${{ env.PIP_PKG_NAME }}
           if-no-files-found: error
 
       - name: GCloud CLI setup
@@ -215,8 +208,6 @@ jobs:
           PYTAG="-cp$(echo ${{ env.python_version }} | tr -d '.')"
           gsutil cp build/lib/python_package/pip_package/${{ env.PIP_PKG_NAME }} gs://open3d-releases-master/python-wheels/
           echo "Download pip package at: https://storage.googleapis.com/open3d-releases-master/python-wheels/${{ env.PIP_PKG_NAME }}"
-          gsutil cp build/lib/python_package/conda_package/osx-64/${{ env.CONDA_PKG_NAME }} gs://open3d-releases-master/conda_package/osx-64/
-          echo "Download conda package at: https://storage.googleapis.com/open3d-releases-master/conda_package/osx-64/${{ env.CONDA_PKG_NAME }}"
 
   test-wheel:
     name: Test wheel
