Revert "disable concurrency"
This reverts commit 3b1ec97ede8dd6061bb1649c77bd4e7251c186c0.

--- a/.github/workflows/webrtc.yml
+++ b/.github/workflows/webrtc.yml
@@ -12,9 +12,9 @@ on:
         required: false
         default: 'e1a98941d3ab10549be6d82d0686bb0fb91ec903' # Date: Wed Apr 7 21:35:29 2021 +0000
 
-# concurrency:
-#   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-#   cancel-in-progress: true
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 env:
   WEBRTC_COMMIT: ${{ github.event.inputs.webrtc_commit }}
