--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ if(BUILD_SHARED_LIBS)
 else()
     option(STATIC_WINDOWS_RUNTIME "Use static (MT/MTd) Windows runtime"      ON )
 endif()
-option(OPEN3D_USE_ONEAPI          "Use Intel OneAPI BaseKit and DPC++"       ON )
+option(OPEN3D_USE_ONEAPI          "Use Intel OneAPI BaseKit and DPC++"       OFF)
 if(OPEN3D_USE_ONEAPI)
     option(GLIBCXX_USE_CXX11_ABI  "Set -D_GLIBCXX_USE_CXX11_ABI=1"           ON )
 else()
