--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -222,15 +222,15 @@ jobs:
       # https://github.community/t/how-to-conditionally-include-exclude-items-in-matrix-eg-based-on-branch/16853/6
       matrix:
         python_version: [3.6, 3.7, 3.8, 3.9]
-        is_master:
-          - ${{ github.ref == 'refs/heads/master' }}
-        exclude:
-          - is_master: false
-            python_version: 3.7
-          - is_master: false
-            python_version: 3.8
-          - is_master: false
-            python_version: 3.9
+        # is_master:
+        #   - ${{ github.ref == 'refs/heads/master' }}
+        # exclude:
+        #   - is_master: false
+        #     python_version: 3.7
+        #   - is_master: false
+        #     python_version: 3.8
+        #   - is_master: false
+        #     python_version: 3.9
 
     steps:
       - name: Checkout source code
@@ -327,15 +327,15 @@ jobs:
       fail-fast: false
       matrix:
         python_version: [3.6, 3.7, 3.8, 3.9]
-        is_master:
-          - ${{ github.ref == 'refs/heads/master' }}
-        exclude:
-          - is_master: false
-            python_version: 3.7
-          - is_master: false
-            python_version: 3.8
-          - is_master: false
-            python_version: 3.9
+        # is_master:
+        #   - ${{ github.ref == 'refs/heads/master' }}
+        # exclude:
+        #   - is_master: false
+        #     python_version: 3.7
+        #   - is_master: false
+        #     python_version: 3.8
+        #   - is_master: false
+        #     python_version: 3.9
 
     steps:
       - name: Checkout source code
@@ -368,6 +368,8 @@ jobs:
           python -m pip install -U scipy==${{ env.SCIPY_VER }} `
             tensorboard==${{ env.TENSORFLOW_VER }}
           $pi_tag=(python -c "import sys; print(f'cp{sys.version_info.major}{sys.version_info.minor}')")
+          dir
+          dir pip_package
           $PIP_PKG_NAME=(Get-ChildItem pip_package\open3d*-$pi_tag-*.whl).Name
           echo "Installing Open3D wheel pip_package\$PIP_PKG_NAME in virtual environment..."
           python -m pip install "pip_package\$PIP_PKG_NAME"
