--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -222,15 +222,15 @@ jobs:
       # https://github.community/t/how-to-conditionally-include-exclude-items-in-matrix-eg-based-on-branch/16853/6
       matrix:
         python_version: [3.6, 3.7, 3.8, 3.9]
-        # is_master:
-        #   - ${{ github.ref == 'refs/heads/master' }}
-        # exclude:
-        #   - is_master: false
-        #     python_version: 3.7
-        #   - is_master: false
-        #     python_version: 3.8
-        #   - is_master: false
-        #     python_version: 3.9
+        is_master:
+          - ${{ github.ref == 'refs/heads/master' }}
+        exclude:
+          - is_master: false
+            python_version: 3.7
+          - is_master: false
+            python_version: 3.8
+          - is_master: false
+            python_version: 3.9
 
     steps:
       - name: Checkout source code
@@ -324,15 +324,15 @@ jobs:
       fail-fast: false
       matrix:
         python_version: [3.6, 3.7, 3.8, 3.9]
-        # is_master:
-        #   - ${{ github.ref == 'refs/heads/master' }}
-        # exclude:
-        #   - is_master: false
-        #     python_version: 3.7
-        #   - is_master: false
-        #     python_version: 3.8
-        #   - is_master: false
-        #     python_version: 3.9
+        is_master:
+          - ${{ github.ref == 'refs/heads/master' }}
+        exclude:
+          - is_master: false
+            python_version: 3.7
+          - is_master: false
+            python_version: 3.8
+          - is_master: false
+            python_version: 3.9
 
     steps:
       - name: Checkout source code
