--- a/cpp/tests/core/CMakeLists.txt
+++ b/cpp/tests/core/CMakeLists.txt
@@ -13,6 +13,7 @@ target_sources(tests PRIVATE
     Scalar.cpp
     ShapeUtil.cpp
     SizeVector.cpp
+    SYCLUtil.cpp
     Tensor.cpp
     TensorCheck.cpp
     TensorFunction.cpp
