pybind run sycl demo

--- a/cpp/open3d/core/CMakeLists.txt
+++ b/cpp/open3d/core/CMakeLists.txt
@@ -12,7 +12,7 @@ target_sources(core PRIVATE
     MemoryManagerStatistic.cpp
     ShapeUtil.cpp
     SizeVector.cpp
-    SYCLUtil.cpp
+    SYCLUtils.cpp
     Tensor.cpp
     TensorCheck.cpp
     TensorFunction.cpp
