--- a/docker/Dockerfile.ci
+++ b/docker/Dockerfile.ci
@@ -126,6 +126,9 @@ RUN source util/ci_utils.sh \
     fi \
  && pip install -r python/requirements_test.txt
 
+# Visualization test dependencies
+RUN apt-get install xvfb
+
 # Open3D Jupyter dependencies
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - \
  && apt-get install -y nodejs \
