--- a/.github/ISSUE_TEMPLATE/1-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug-report.yml
@@ -45,8 +45,8 @@ body:
       import open3d as o3d
       import numpy as np
 
-      source = o3d.t.io.read_point_cloud("../../test_data/ICP/cloud_bin_0.pcd")
-      target = o3d.t.io.read_point_cloud("../../test_data/ICP/cloud_bin_1.pcd")
+      source = o3d.t.io.read_point_cloud("cloud_bin_0.pcd")
+      target = o3d.t.io.read_point_cloud("cloud_bin_1.pcd")
 
       # For Colored-ICP `colors` attribute must be of the same dtype as
       # `positions` and `normals` attribute.
