--- a/docker/Dockerfile.ci
+++ b/docker/Dockerfile.ci
@@ -114,8 +114,7 @@ COPY . /root/Open3D
 WORKDIR /root/Open3D
 
 # Open3D C++ dependencies
-RUN ./util/install_deps_ubuntu.sh assume-yes \
- && rm -rf /var/lib/apt/lists/*
+RUN ./util/install_deps_ubuntu.sh assume-yes
 
 # Open3D Python dependencies
 RUN source util/ci_utils.sh \
@@ -127,7 +126,8 @@ RUN source util/ci_utils.sh \
  && pip install -r python/requirements_test.txt
 
 # Visualization test dependencies
-RUN apt-get install xvfb
+RUN apt-get install xvfb \
+ && rm -rf /var/lib/apt/lists/*
 
 # Open3D Jupyter dependencies
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - \
