test all py versions

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -224,13 +224,13 @@ jobs:
         python_version: [3.6, 3.7, 3.8, 3.9]
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
-        exclude:
-          - is_master: false
-            python_version: 3.7
-          - is_master: false
-            python_version: 3.8
-          - is_master: false
-            python_version: 3.9
+        # exclude:
+        #   - is_master: false
+        #     python_version: 3.7
+        #   - is_master: false
+        #     python_version: 3.8
+        #   - is_master: false
+        #     python_version: 3.9
 
     steps:
       - name: Checkout source code
@@ -326,13 +326,13 @@ jobs:
         python_version: [3.6, 3.7, 3.8, 3.9]
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
-        exclude:
-          - is_master: false
-            python_version: 3.7
-          - is_master: false
-            python_version: 3.8
-          - is_master: false
-            python_version: 3.9
+        # exclude:
+        #   - is_master: false
+        #     python_version: 3.7
+        #   - is_master: false
+        #     python_version: 3.8
+        #   - is_master: false
+        #     python_version: 3.9
 
     steps:
       - name: Checkout source code
